-- 1. RESET: Hapus tabel lama jika ada agar bersih
DROP TABLE IF EXISTS orders;
DROP TABLE IF EXISTS products;

-- 2. BUAT TABEL BARU: Membuat tabel products
CREATE TABLE products (
  id BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  name TEXT NOT NULL,
  price NUMERIC NOT NULL,
  stock INTEGER NOT NULL DEFAULT 0,
  image TEXT,
  category TEXT,
  created_at TIMESTAMP WITH TIME ZONE DEFAULT TIMEZONE('utc'::text, NOW())
);

-- 3. BUAT TABEL BARU: Membuat tabel orders
CREATE TABLE orders (
  id BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  total_price NUMERIC NOT NULL,
  items JSONB,
  created_at TIMESTAMP WITH TIME ZONE DEFAULT TIMEZONE('utc'::text, NOW())
);

-- 4. ISI DATA: Memasukkan data contoh
INSERT INTO products (name, price, stock, image, category) VALUES
  ('Kopi Arabika Gayo 200g', 85000, 50, 'https://images.unsplash.com/photo-1559056199-641a0ac8b55e?auto=format&fit=crop&w=300&q=80', 'Minuman'),
  ('Headphone Bluetooth Wireless', 250000, 20, 'https://images.unsplash.com/photo-1505740420928-5e560c06d30e?auto=format&fit=crop&w=300&q=80', 'Elektronik'),
  ('Sepatu Sneakers Putih Casual', 199000, 15, 'https://images.unsplash.com/photo-1549298916-b41d501d3772?auto=format&fit=crop&w=300&q=80', 'Fashion'),
  ('Tanaman Hias Monstera', 45000, 30, 'https://images.unsplash.com/photo-1614594975525-e45890e2e126?auto=format&fit=crop&w=300&q=80', 'Rumah Tangga'),
  ('Botol Minum Tumbler Stainless', 75000, 100, 'https://images.unsplash.com/photo-1602143407151-01114192003f?auto=format&fit=crop&w=300&q=80', 'Dapur'),
  ('Jam Tangan Minimalis', 150000, 25, 'https://images.unsplash.com/photo-1524592094714-0f0654e20314?auto=format&fit=crop&w=300&q=80', 'Aksesoris'),
  ('Kamera Mirrorless', 4500000, 5, 'https://images.unsplash.com/photo-1516035069371-29a1b244cc32?auto=format&fit=crop&w=300&q=80', 'Elektronik'),
  ('Tas Ransel Canvas', 120000, 40, 'https://images.unsplash.com/photo-1553062407-98eeb64c6a62?auto=format&fit=crop&w=300&q=80', 'Fashion');

-- 5. BUAT TABEL BARU: Membuat tabel wishlist
CREATE TABLE wishlist (
  id BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  user_id UUID NOT NULL REFERENCES users(id) ON DELETE CASCADE,
  product_id BIGINT NOT NULL REFERENCES products(id) ON DELETE CASCADE,
  created_at TIMESTAMP WITH TIME ZONE DEFAULT TIMEZONE('utc'::text, NOW()),
  UNIQUE(user_id, product_id)
);
