Table users {
  id uuid [pk, note: "Synced from Supabase Auth"]
  username text
  email text
  role text
  created_at timestamp
}

Table products {
  id bigint [pk, increment]
  name text
  price numeric
  stock integer
  image text
  category text
  created_at timestamp
}

Table orders {
  id bigint [pk, increment]
  user_id uuid [ref: > users.id, note: "Linked to User"]
  total_price numeric
  status text [note: "e.g. paid, pending"]
  created_at timestamp
}

Table order_items {
  id bigint [pk, increment]
  order_id bigint [ref: > orders.id]
  product_id bigint [ref: > products.id]
  quantity integer
  price numeric
}

Table wishlist {
  id bigint [pk, increment]
  user_id uuid [ref: > users.id]
  product_id products [ref: > products.id]
  created_at timestamp
}
